[package]
name = "cts-gate"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["transport", "tls", "tls-roots"] }
prost = "0.12"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"